refactor: improve the implementation of SCD Grpc service