@@ -3,31 +3,41 @@ package com.mercor.assignment.scd.domain.core.service.grpc;
 import com.mercor.assignment.scd.common.errorhandling.exceptions.EntityNotFoundException;
 import com.mercor.assignment.scd.domain.common.Entity;
 import com.mercor.assignment.scd.domain.core.*;
+import com.mercor.assignment.scd.domain.core.constants.ServiceName;
 import com.mercor.assignment.scd.domain.core.enums.EntityType;
+import com.mercor.assignment.scd.domain.core.mapper.EntityMapper;
+import com.mercor.assignment.scd.domain.core.model.SCDEntity;
+import com.mercor.assignment.scd.domain.core.service.SCDService;
 import com.mercor.assignment.scd.domain.job.model.Job;
 import com.mercor.assignment.scd.domain.job.service.JobService;
+import com.mercor.assignment.scd.domain.paymentlineitem.model.PaymentLineItem;
 import com.mercor.assignment.scd.domain.paymentlineitem.service.regular.PaymentLineItemService;
+import com.mercor.assignment.scd.domain.timelog.model.Timelog;
 import com.mercor.assignment.scd.domain.timelog.service.regular.TimelogService;
 import io.grpc.stub.StreamObserver;
-import lombok.RequiredArgsConstructor;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.grpc.server.service.GrpcService;
 
 /**
  * Implementation of the SCD Service that provides abstraction over SCD operations
  * Uses entity-specific services based on the requested entity type
  */
+@Slf4j
 @GrpcService
-@RequiredArgsConstructor
 public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
 
-  private final JobService jobService;
-//  private final TimelogService timelogService;
-//  private final PaymentLineItemService paymentLineItemService;
+  private final Map<String, SCDService<?>> serviceMap;
+
+  public SCDGrpcServiceImpl(JobService jobService, TimelogService timelogService, PaymentLineItemService paymentLineItemService){
+    this.serviceMap = new HashMap<>();
+    serviceMap.put(ServiceName.JOB_SERVICE, jobService);
+    serviceMap.put(ServiceName.TIMELOG_SERVICE, timelogService);
+    serviceMap.put(ServiceName.PAYMENT_LINE_ITEMS_SERVICE, paymentLineItemService);
+  }
 
   @Override
   public void getLatestVersion(GetLatestVersionRequest request, StreamObserver<EntityResponse> responseObserver) {
@@ -43,6 +53,13 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
 
     responseObserver.onNext(response);
     responseObserver.onCompleted();
+  }
+
+  private SCDService<?> getServiceForType(String serviceName) {
+    if (serviceName == null) {
+      throw new IllegalArgumentException("Unknown service type: " + serviceName);
+    }
+    return serviceMap.get(serviceName);
   }
 
   @Override
@@ -66,10 +83,10 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
     String entityType = request.getEntityType();
     Map<String, String> conditions = request.getConditionsMap();
     boolean latestVersionOnly = request.getLatestVersionOnly();
-    
+
     // Convert string conditions to appropriate types
     Map<String, Object> typedConditions = convertConditions(entityType, conditions);
-    
+
     // Execute query based on entity type
     List<Entity> results = queryEntities(entityType, typedConditions, latestVersionOnly);
 
@@ -86,10 +103,10 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
     String entityType = request.getEntityType();
     String id = request.getId();
     Map<String, String> fields = request.getFieldsMap();
-    
+
     // Convert string fields to appropriate types
     Map<String, Object> typedFields = convertConditions(entityType, fields);
-    
+
     // Create a new version based on the entity type
     Entity updatedEntity = createNewVersion(entityType, id, typedFields);
 
@@ -109,7 +126,7 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
     // Fetch latest versions of all requested entities
     Map<String, Entity> entities = new HashMap<>();
     Map<String, String> errors = new HashMap<>();
-    
+
     for (String id : ids) {
       try {
         Entity entity = findLatestVersionById(entityType, id);
@@ -137,20 +154,20 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
     String entityType = request.getEntityType();
     List<Entity> entities = request.getEntitiesList();
     Map<String, String> commonFields = request.getCommonFieldsMap();
-    
+
     // Convert common fields to appropriate types
     Map<String, Object> typedCommonFields = convertConditions(entityType, commonFields);
-    
+
     // Process batch update
     Map<String, Entity> updatedEntities = new HashMap<>();
     Map<String, String> errors = new HashMap<>();
-    
+
     for (Entity entity : entities) {
       try {
         // Apply common fields to each entity
         Map<String, Object> entityFields = new HashMap<>(typedCommonFields);
         // Add entity-specific fields if needed from the entity object
-        
+
         // Create new version
         Entity updated = createNewVersion(entityType, entity.getId(), entityFields);
         updatedEntities.put(entity.getId(), updated);
@@ -169,110 +186,93 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
     responseObserver.onNext(response);
     responseObserver.onCompleted();
   }
-  
+
   // Private helper methods to route requests to appropriate service based on entity type
-  
+
   private Entity findLatestVersionById(String entityType, String id) {
-    switch (EntityType.valueOf(entityType.toUpperCase())) {
+    final EntityType type = EntityType.fromValue(entityType);
+    SCDService<?> service = getServiceForType(type.getServiceName());
+
+    switch (type) {
       case JOBS:
-        return convertJobToEntity(jobService.findLatestVersionById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Job not found with ID: " + id)));
-//      case TIMELOG:
-//        return convertTimelogToEntity(timelogService.findLatestVersionById(id)
-//            .orElseThrow(() -> new EntityNotFoundException("Timelog not found with ID: " + id)));
-//      case PAYMENT_LINE_ITEMS:
-//        return convertPaymentLineItemToEntity(paymentLineItemService.findLatestVersionById(id)
-//            .orElseThrow(() -> new EntityNotFoundException("Payment line item not found with ID: " + id)));
+        Job job = (Job) service.findLatestVersionById(id).orElseThrow(() -> new EntityNotFoundException("Job with ID " + id + " not found!"));
+        return EntityMapper.INSTANCE.mapJobToEntityProto(job);
+      case TIMELOG:
+        Timelog timelog = (Timelog) service.findLatestVersionById(id).orElseThrow(() -> new EntityNotFoundException("Timelog with ID " + id + " not found!"));
+        return EntityMapper.INSTANCE.mapTimelogToEntityProto(timelog);
+      case PAYMENT_LINE_ITEMS:
+        PaymentLineItem paymentLineItem = (PaymentLineItem) service.findLatestVersionById(id).orElseThrow(() -> new EntityNotFoundException("Paymen tline item with ID " + id + " not found!"));
+        return EntityMapper.INSTANCE.mapPaymentLineItemToEntityProto(paymentLineItem);
       default:
         throw new IllegalArgumentException("Unsupported entity type: " + entityType);
     }
   }
-  
+
   private List<Entity> findAllVersionsById(String entityType, String id) {
-    switch (EntityType.valueOf(entityType.toUpperCase())) {
+    final EntityType type = EntityType.fromValue(entityType);
+    SCDService<?> service = getServiceForType(type.getServiceName());
+
+    switch (type) {
       case JOBS:
-        return jobService.findAllVersionsById(id).stream()
-            .map(this::convertJobToEntity)
-            .collect(Collectors.toList());
-//      case TIMELOG:
-//        return timelogService.findAllVersionsById(id).stream()
-//            .map(this::convertTimelogToEntity)
-//            .collect(Collectors.toList());
-//      case PAYMENT_LINE_ITEMS:
-//        return paymentLineItemService.findAllVersionsById(id).stream()
-//            .map(this::convertPaymentLineItemToEntity)
-//            .collect(Collectors.toList());
+        List<Job> jobs = (List<Job>) service.findAllVersionsById(id);
+        return jobs.stream().map(EntityMapper.INSTANCE::mapJobToEntityProto).toList();
+      case TIMELOG:
+        List<Timelog> timelogs = (List<Timelog>) service.findAllVersionsById(id);
+        return timelogs.stream().map(EntityMapper.INSTANCE::mapTimelogToEntityProto).toList();
+      case PAYMENT_LINE_ITEMS:
+        List<PaymentLineItem> paymentLineItems = (List<PaymentLineItem>) service.findAllVersionsById(id);
+        return paymentLineItems.stream().map(EntityMapper.INSTANCE::mapPaymentLineItemToEntityProto).toList();
       default:
         throw new IllegalArgumentException("Unsupported entity type: " + entityType);
     }
   }
-  
+
   private List<Entity> queryEntities(String entityType, Map<String, Object> conditions, boolean latestVersionOnly) {
     if (!latestVersionOnly) {
       throw new UnsupportedOperationException("Non-latest version queries are not currently supported");
     }
-    
-    switch (EntityType.valueOf(entityType.toUpperCase())) {
+
+    final EntityType type = EntityType.fromValue(entityType);
+    SCDService<? extends SCDEntity> service = getServiceForType(type.getServiceName());
+
+    switch (type) {
       case JOBS:
-        return jobService.findLatestVersionsByCriteria(conditions).stream()
-            .map(this::convertJobToEntity)
-            .collect(Collectors.toList());
-//      case TIMELOG:
-//        return timelogService.findLatestVersionsByCriteria(conditions).stream()
-//            .map(this::convertTimelogToEntity)
-//            .collect(Collectors.toList());
-//      case PAYMENT_LINE_ITEMS:
-//        return paymentLineItemService.findLatestVersionsByCriteria(conditions).stream()
-//            .map(this::convertPaymentLineItemToEntity)
-//            .collect(Collectors.toList());
+        List<Job> jobs = (List<Job>) service.findLatestVersionsByCriteria(conditions);
+        return jobs.stream().map(EntityMapper.INSTANCE::mapJobToEntityProto).toList();
+      case TIMELOG:
+        List<Timelog> timelog = (List<Timelog>) service.findLatestVersionsByCriteria(conditions);
+        return timelog.stream().map(EntityMapper.INSTANCE::mapTimelogToEntityProto).toList();
+      case PAYMENT_LINE_ITEMS:
+        List<PaymentLineItem> paymentLineItems = (List<PaymentLineItem>) service.findLatestVersionsByCriteria(conditions);
+        return paymentLineItems.stream().map(EntityMapper.INSTANCE::mapPaymentLineItemToEntityProto).toList();
       default:
         throw new IllegalArgumentException("Unsupported entity type: " + entityType);
     }
   }
-  
+
   private Entity createNewVersion(String entityType, String id, Map<String, Object> fields) {
-    switch (EntityType.valueOf(entityType.toUpperCase())) {
+    final EntityType type = EntityType.fromValue(entityType);
+    SCDService<? extends SCDEntity> service = getServiceForType(type.getServiceName());
+
+    switch (type) {
       case JOBS:
-        return convertJobToEntity(jobService.createNewVersion(id, fields));
-//      case TIMELOG:
-//        return convertTimelogToEntity(timelogService.createNewVersion(id, fields));
-//      case PAYMENT_LINE_ITEMS:
-//        return convertPaymentLineItemToEntity(paymentLineItemService.createNewVersion(id, fields));
+        final Job job = (Job) service.createNewVersion(id, fields);
+        return EntityMapper.INSTANCE.mapJobToEntityProto(job);
+      case TIMELOG:
+        final Timelog timelog = (Timelog) service.createNewVersion(id, fields);
+        return EntityMapper.INSTANCE.mapTimelogToEntityProto(timelog);
+      case PAYMENT_LINE_ITEMS:
+        final PaymentLineItem paymentLineItem = (PaymentLineItem) service.createNewVersion(id, fields);
+        return EntityMapper.INSTANCE.mapPaymentLineItemToEntityProto(paymentLineItem);
       default:
         throw new IllegalArgumentException("Unsupported entity type: " + entityType);
     }
   }
-  
-  // Conversion methods to transform domain objects to gRPC Entity objects
 
-  private Entity convertJobToEntity(Job job) {
-    // Create an Entity.Builder based on your actual protobuf definition
-    // This is an example - adjust according to your actual Entity message structure
-    Entity.Builder builder = Entity.newBuilder();
-
-    return builder.build();
-  }
-  
-//  private Entity convertTimelogToEntity(Timelog timelog) {
-//    // Create an Entity.Builder based on your actual protobuf definition
-//    // This is an example - adjust according to your actual Entity message structure
-//    Entity.Builder builder = Entity.newBuilder();
-//
-//    return builder.build();
-//  }
-//
-//  private Entity convertPaymentLineItemToEntity(PaymentLineItem lineItem) {
-//    // Create an Entity.Builder based on your actual protobuf definition
-//    // This is an example - adjust according to your actual Entity message structure
-//    Entity.Builder builder = Entity.newBuilder();
-//
-//    return builder.build();
-//  }
-  
   // Helper method to convert string conditions to typed values
   private Map<String, Object> convertConditions(String entityType, Map<String, String> conditions) {
     Map<String, Object> result = new HashMap<>();
-    
+
     switch (EntityType.valueOf(entityType.toUpperCase())) {
       case JOBS:
         // Convert job-specific fields to appropriate types
@@ -308,7 +308,7 @@ public class SCDGrpcServiceImpl extends SCDServiceGrpc.SCDServiceImplBase {
         // Just copy as strings for unknown entity types
         result.putAll(conditions);
     }
-    
+
     return result;
   }
 }
